Change title from 'Untuk Ratu Hatiku' to 'Dear Zoldyck, R'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untuk Ratu Hatiku</title>
+    <title>Dear Zoldyck, R</title>
     <style>
         :root {
             --pink: #ff4d6d;
