--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head><title>For My Queen</title><link rel="stylesheet" href="style.css"></head>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>For My Queen</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <div id="emoji-container"></div>
     <div class="container">
