Update title and paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Queen</title>
+    <title>Hai Sayang!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="emoji-container"></div>
     <div class="container">
         <h1>Halo Cantik! 🌸</h1>
-        <p>Ada kejutan kecil di bawah laut ini untukmu...</p>
+        <p>Ada kejutan kecil di bawah laut ini khusus untukmu...</p>
         <p>🐳🐟🐠</p>
         <a href="galeri.html" class="btn">Buka Kejutannya ✨</a>
     </div>
