--- a/gallery.html
+++ b/gallery.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head><title>Memory Lane</title><link rel="stylesheet" href="style.css"></head>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kenangan Kita</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <div id="emoji-container"></div>
     <div class="container">
         <h2>Our Memories 📸</h2>
-        <img src="foto1.jpg" alt="Foto Kita">
-        <img src="foto2.jpg" alt="Foto Kita">
+        <img src="foto1.jpg" alt="Foto 1">
+        <img src="foto2.jpg" alt="Foto 2">
         <p>Ikan-ikan ini saksi bisu betapa bahagianya aku bersamamu...</p>
-        <a href="surat.html" class="btn">Lanjut Baca Surat →</a>
+        <a href="surat.html" class="btn">Baca Surat Sayang →</a>
     </div>
     <script src="script.js"></script>
 </body>
