Update images in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -10,8 +10,8 @@
     <div id="emoji-container"></div>
     <div class="container">
         <h2>Our Memories 📸</h2>
-        <img src="foto1.jpg" alt="Foto 1">
-        <img src="foto2.jpg" alt="Foto 2">
+        <img src="yjj.png" alt="Foto 1">
+        <img src="thh.png" alt="Foto 2">
         <p>Ikan-ikan ini saksi bisu betapa bahagianya aku bersamamu...</p>
         <a href="surat.html" class="btn">Baca Surat Sayang →</a>
     </div>
